--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
@@ -1277,7 +1277,10 @@ function openNewWindow(newURL,target='_self') {
   saveState();
   var popUp = window.open(newURL,target);
   if ( !popUp || popUp.closed || typeof popUp == "undefined" ) {
-    addBannerWarning("<?tr("Popup Blocked.  CA requires popups to be enabled under certain circumstances.  You must white list your server within your browser to allow popups")?>",true,true);
+    var popupWarning = addBannerWarning("<?=_('Popup Blocked.');?>");
+    setTimeout(function() {
+      removeBannerWarning(popupWarning);}
+      ,10000);
   }
 }
 
